force-app/main/default/objects/CampaignMember/fields/Price_per_ticket__c.field-meta.xml
<CustomField>
    <fullName>Price_per_ticket__c</fullName>
    <label>Price per ticket</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>