force-app/main/default/objects/CampaignMember/fields/Reason_for_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Cancellation__c</fullName>
    <label>Reason for Cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Havde glemt det og har nu andre planer</fullName>
            </value>
            <value>
                <fullName>Arbejdet kom desværre i vejen</fullName>
            </value>
            <value>
                <fullName>Sygdom</fullName>
            </value>
            <value>
                <fullName>Jeg har tilmeldt mig et andet foredrag</fullName>
            </value>
            <value>
                <fullName>Jeg vil hellere have et gratis rådgivermøde hvor det kun drejer sig om mig/min familie</fullName>
            </value>
            <value>
                <fullName>Jeg er bare ikke interesseret længere</fullName>
            </value>
            <value>
                <fullName>Cancelled by Meeting Booker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>