force-app/main/default/objects/CampaignMember/fields/Referral_Count__c.field-meta.xml
<CustomField>
    <fullName>Referral_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Referral Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>