force-app/main/default/objects/CampaignMember/fields/Referral_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Referral_Created_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaign_Members_Reference</relationshipName>
    <type>Lookup</type>
</CustomField>