force-app/main/default/objects/CampaignMember/fields/Referring_Lead__c.field-meta.xml
<CustomField>
    <fullName>Referring_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referring Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>