force-app/main/default/objects/CampaignMember/fields/Refunded_amount__c.field-meta.xml
<CustomField>
    <fullName>Refunded_amount__c</fullName>
    <label>Refunded amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>