force-app/main/default/objects/CampaignMember/fields/Registration_Staging__c.field-meta.xml
<CustomField>
    <fullName>Registration_Staging__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration Staging</label>
    <referenceTo>Registration_Staging__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>