force-app/main/default/objects/CampaignMember/fields/Remaining_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Tickets__c</fullName>
    <formula>MAX(0, Tickets_in_order__c - Cancelled_tickets__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Tickets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>