force-app/main/default/objects/CampaignMember/fields/Scanned_at_entry__c.field-meta.xml
<CustomField>
    <fullName>Scanned_at_entry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scanned at entry</label>
    <type>Checkbox</type>
</CustomField>