force-app/main/default/objects/CampaignMember/fields/Seat_label__c.field-meta.xml
<CustomField>
    <fullName>Seat_label__c</fullName>
    <label>Seat label</label>
    <length>30</length>
    <type>Text</type>
</CustomField>