force-app/main/default/objects/CampaignMember/fields/Selv_bestemme_hvem_der_skal_arve_mig__c.field-meta.xml
<CustomField>
    <fullName>Selv_bestemme_hvem_der_skal_arve_mig__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selv bestemme, hvem der skal arve mig</label>
    <type>Checkbox</type>
</CustomField>