force-app/main/default/objects/CampaignMember/fields/Signup_Count__c.field-meta.xml
<CustomField>
    <fullName>Signup_Count__c</fullName>
    <label>Signup Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>