force-app/main/default/objects/CampaignMember/fields/Sikre_b_rn_opv_kst_med_b_rnetestamente__c.field-meta.xml
<CustomField>
    <fullName>Sikre_b_rn_opv_kst_med_b_rnetestamente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sikre børn opvækst med børnetestamente</label>
    <type>Checkbox</type>
</CustomField>