force-app/main/default/objects/CampaignMember/fields/Sikre_min_partner_gtef_lle_mest_muligt__c.field-meta.xml
<CustomField>
    <fullName>Sikre_min_partner_gtef_lle_mest_muligt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sikre min partner/ægtefælle mest muligt</label>
    <type>Checkbox</type>
</CustomField>