force-app/main/default/objects/CampaignMember/fields/SMS_Response_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>SMS_Response_Time_Minutes__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Time_of_Lecture_Form_Reply__c)),
    ROUND(MOD((Time_of_Lecture_Form_Reply__c - Time_of_Lecture_Form_Invite__c) * 24 * 60, 60), 0),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SMS Response Time (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>