force-app/main/default/objects/CampaignMember/fields/SMS_Response_Time_Total_Days__c.field-meta.xml
<CustomField>
    <fullName>SMS_Response_Time_Total_Days__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Time_of_Lecture_Form_Reply__c)),
    ROUND(((Time_of_Lecture_Form_Reply__c - Time_of_Lecture_Form_Invite__c) * 24) / 24, 2),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SMS Response Time (Total Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>