force-app/main/default/objects/CampaignMember/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <formula>LPAD(TEXT(DAY(DATEVALUE(Campaign.Start__c))), 2, &apos;0&apos;) &amp; &quot;/&quot; &amp; 
LPAD(TEXT(MONTH(DATEVALUE(Campaign.Start__c))), 2, &apos;0&apos;) &amp; &quot;-&quot; &amp; 
TEXT(YEAR(DATEVALUE(Campaign.Start__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date</label>
    <type>Text</type>
</CustomField>