force-app/main/default/objects/CampaignMember/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <formula>LPAD(TEXT(MOD(HOUR(TIMEVALUE(Campaign.Start__c)) + 2, 24)), 2, &apos;0&apos;) &amp; &quot;:&quot; &amp; 
LPAD(TEXT(MINUTE(TIMEVALUE(Campaign.Start__c))), 2, &apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Time</label>
    <type>Text</type>
</CustomField>