force-app/main/default/objects/CampaignMember/fields/Submitted_Digital_Lecture_Form__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Digital_Lecture_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted Digital Lecture Form</label>
    <type>Checkbox</type>
</CustomField>