force-app/main/default/objects/CampaignMember/fields/Ticket_ID__c.field-meta.xml
<CustomField>
    <fullName>Ticket_ID__c</fullName>
    <label>Ticket ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>