force-app/main/default/objects/CampaignMember/fields/Tickets_in_order__c.field-meta.xml
<CustomField>
    <fullName>Tickets_in_order__c</fullName>
    <label>Tickets in order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>