force-app/main/default/objects/CampaignMember/fields/Tickets_Scanned_at_Entry__c.field-meta.xml
<CustomField>
    <fullName>Tickets_Scanned_at_Entry__c</fullName>
    <label>Tickets Scanned at Entry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>