force-app/main/default/objects/CampaignMember/fields/Time_of_booking__c.field-meta.xml
<CustomField>
    <fullName>Time_of_booking__c</fullName>
    <label>Time of booking</label>
    <type>DateTime</type>
</CustomField>