force-app/main/default/objects/CampaignMember/fields/Time_of_Email_Form_Invite__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Email_Form_Invite__c</fullName>
    <label>Time of Email Form Invite</label>
    <type>DateTime</type>
</CustomField>