force-app/main/default/objects/CampaignMember/fields/Time_of_Email_Form_Reply__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Email_Form_Reply__c</fullName>
    <label>Time of Email Form Reply</label>
    <type>DateTime</type>
</CustomField>