force-app/main/default/objects/CampaignMember/fields/Time_of_Lecture_Form_Reply__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Lecture_Form_Reply__c</fullName>
    <label>Time of Lecture Form Reply</label>
    <type>DateTime</type>
</CustomField>