force-app/main/default/objects/CampaignMember/fields/Total_Order_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Order_Discount__c</fullName>
    <formula>IF(
Order__r.Campaign__c  =  CampaignId ,
Order__r.Total_Discount__c,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Order Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>