force-app/main/default/objects/CampaignMember/fields/Trigger_SFMC_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Trigger_SFMC_Reminder__c</fullName>
    <label>Trigger SFMC Reminder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Trigger_SFMC_Reminder</valueSetName>
    </valueSet>
</CustomField>