force-app/main/default/objects/CampaignMember/fields/Undg_arveafgift_til_arvinger__c.field-meta.xml
<CustomField>
    <fullName>Undg_arveafgift_til_arvinger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Undgå arveafgift til arvinger</label>
    <type>Checkbox</type>
</CustomField>