force-app/main/default/objects/CampaignMember/fields/Undg_at_b_rn_f_r_deres_arv_for_tidligt__c.field-meta.xml
<CustomField>
    <fullName>Undg_at_b_rn_f_r_deres_arv_for_tidligt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Undgå at børn får deres arv for tidligt</label>
    <type>Checkbox</type>
</CustomField>