force-app/main/default/objects/CampaignMember/fields/Undg_at_b_rns_risiko_for_50_mindre_arv__c.field-meta.xml
<CustomField>
    <fullName>Undg_at_b_rns_risiko_for_50_mindre_arv__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Undgå at børns risiko for 50% mindre arv</label>
    <type>Checkbox</type>
</CustomField>