force-app/main/default/objects/CampaignMember/fields/Undg_at_partner_skal_betale_ved_min_d_d__c.field-meta.xml
<CustomField>
    <fullName>Undg_at_partner_skal_betale_ved_min_d_d__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Undgå at partner skal betale ved min død</label>
    <type>Checkbox</type>
</CustomField>