force-app/main/default/objects/CampaignMember/fields/Undg_at_staten_bliver_min_v_rge__c.field-meta.xml
<CustomField>
    <fullName>Undg_at_staten_bliver_min_v_rge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Undgå at staten bliver min værge</label>
    <type>Checkbox</type>
</CustomField>