force-app/main/default/objects/CampaignMember/fields/Undg_en_sk_vfordeling_af_arven__c.field-meta.xml
<CustomField>
    <fullName>Undg_en_sk_vfordeling_af_arven__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Undgå en skævfordeling af arven</label>
    <type>Checkbox</type>
</CustomField>