force-app/main/default/objects/CampaignMember/fields/User_Created_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Created_Type__c</fullName>
    <label>User Created Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>User_Created_Type</valueSetName>
    </valueSet>
</CustomField>