force-app/main/default/objects/CampaignMember/fields/UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>UTM_Medium__c</fullName>
    <label>UTM Medium</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
            </value>
            <value>
                <fullName>Totalliv</fullName>
            </value>
            <value>
                <fullName>PR Leads</fullName>
            </value>
            <value>
                <fullName>Website Form</fullName>
            </value>
            <value>
                <fullName>Seren</fullName>
            </value>
            <value>
                <fullName>Salesforce Screen Flow</fullName>
            </value>
            <value>
                <fullName>Findforsikring.dk</fullName>
            </value>
            <value>
                <fullName>Marketing Email</fullName>
            </value>
            <value>
                <fullName>Calendly</fullName>
            </value>
            <value>
                <fullName>Contact Form</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Google-ads</fullName>
            </value>
            <value>
                <fullName>Popermo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>