force-app/main/default/objects/CampaignMember/fields/Venue__c.field-meta.xml
<CustomField>
    <fullName>Venue__c</fullName>
    <formula>Campaign.Venue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Venue</label>
    <type>Text</type>
</CustomField>