force-app/main/default/objects/CampaignMember/fields/View__c.field-meta.xml
<CustomField>
    <fullName>View__c</fullName>
    <formula>HYPERLINK( Id, &quot;View&quot; )</formula>
    <label>View</label>
    <type>Text</type>
</CustomField>