force-app/main/default/objects/CampaignMember/fields/Walk_In_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Walk_In_Attendee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Walk-In Attendee</label>
    <type>Checkbox</type>
</CustomField>