force-app/main/default/objects/CampaignMember/fields/Wants_Future_Power_of_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Wants_Future_Power_of_Attorney__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wants Future Power of Attorney</label>
    <type>Checkbox</type>
</CustomField>