force-app/main/default/objects/CampaignMember/fields/Was_Rescheduled__c.field-meta.xml
<CustomField>
    <fullName>Was_Rescheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is set when the Campaign the Campaign Member was on before, was rescheduled. It is used early in the reminder flow in Marketing Cloud, to determine whether to skip the booking confirmation, when a Campaign Member is created.</inlineHelpText>
    <label>Was Rescheduled</label>
    <type>Checkbox</type>
</CustomField>