force-app/main/default/objects/CampaignMember/recordTypes/Lecture_Attendee.recordType-meta.xml
<RecordType>
    <fullName>Lecture_Attendee</fullName>
    <active>true</active>
    <label>Lecture Attendee</label>
</RecordType>