force-app/main/default/objects/CampaignMember/recordTypes/Organic_Campaign_Member.recordType-meta.xml
<RecordType>
    <fullName>Organic_Campaign_Member</fullName>
    <active>true</active>
    <label>Organic Campaign Member</label>
</RecordType>