force-app/main/default/objects/CampaignMember/recordTypes/Partner_Lead.recordType-meta.xml
<RecordType>
    <fullName>Partner_Lead</fullName>
    <active>true</active>
    <label>Partner Lead</label>
</RecordType>