force-app/main/default/objects/CampaignMember/recordTypes/Real_Estate_Lead.recordType-meta.xml
<RecordType>
    <fullName>Real_Estate_Lead</fullName>
    <active>true</active>
    <label>Real Estate Lead</label>
</RecordType>