force-app/main/default/objects/CampaignMember/recordTypes/User_Created.recordType-meta.xml
<RecordType>
    <fullName>User_Created</fullName>
    <active>true</active>
    <label>User Created</label>
</RecordType>